--- a/host.html
+++ b/host.html
@@ -75,7 +75,7 @@
         }
     </style>
 
-    <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="stylesheet" href="/public/css/styles.css"/>
 
     <div id="room-details" class="control block-cube">
         <!-- <button id="create">Create game</button> -->
@@ -115,7 +115,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script>
-    <script src="/js/host2.js"></script>
+    <script src="/public/js/host2.js"></script>
 </body>
 
 </html>
